# mt-wg-meshconf

./: Cargo.toml
src/: main.rs
