[package]
name = "mt-wg-meshconf"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"
wireguard-keys = "0.1.1"
macaddr = "1.0"
